@@ -35,6 +35,8 @@ Revision history for Fatal
         * FEATURE: Addded support for exec (although this
           breaks the exotic form while autodie is in scope).
 
+        * BUGFIX: 'no autodie' now plays nicely with user subs.
+
 1.11_01 Fri Jul  4 12:53:11 AEST 2008
 
         * RELEASE CODENAME: "Aristotle", in thanks for the many
